[package]
name = "mini-glade"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
env_logger = "0.11.8"
instant = "0.1.13"
log = "0.4.28"
nalgebra = "0.34.1"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "26.0.1", features = ["webgl"]}
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "mini-glade-bin"
path = "src/main.rs"


[lib]
name = "mini_glade_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
